# mri-reconstraction-PINN

./: .gitignore  pyproject.toml
checkpoints/: mini_fno_epoch10_20260220_143115.pt
data/: toy_mri.h5
mhwf_pikan_mri/: Makefile  pyproject.toml
scripts/: train_cpu_test.py
src/mhwf_pikan/core/: fno_kan.py  fourier_embedding.py  mini_fno.py  network.py  wavelet_embedding.py
src/mhwf_pikan/data/: mri_loader.py  toy_dataset.py
src/mhwf_pikan/physics/: bloch_model.py  data_consistency.py
