[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhwf-pikan-mri"
version = "0.1.0"
description = "Medical Hybrid Wavelet-Fourier PIKAN for MRI Reconstruction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    # Core ML (CPU version for now)
    "torch==2.1.0",
    "torchvision==0.16.0",
    "numpy<2.0",
    "scipy",
    
    # MRI specific
    "h5py",
    "pywavelets",
    
    # API & Reporting (reuse from X-ray project)
    "fastapi>=0.104.0",
    "uvicorn[standard]",
    "python-multipart",
    "reportlab>=4.0.0",
    "pydantic>=2.0.0",
    
    # Development
    "pytest>=7.0.0",
    "black",
    "ruff",
    "mypy",
    "tqdm",
    "matplotlib",
    "tensorboard",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/yourusername/mhwf-pikan-mri"
Repository = "https://github.com/yourusername/mhwf-pikan-mri"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "scipy.*",
    "h5py.*",
    "pywt.*",
    "matplotlib.*",
    "tensorboard.*",
    "reportlab.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks tests as integration tests",
]
